Actualizar index.html el capital Archive

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <h3 class="text-xl font-semibold mb-2">Obras Disponibles</h3>
             <ul class="space-y-2">
               <li><a href="https://www.gutenberg.org/ebooks/64920" target="_blank" class="text-blue-600 hover:underline">El Manifiesto Comunista</a></li>
-              <li><a href="https://www.gutenberg.org/ebooks/2600" target="_blank" class="text-blue-600 hover:underline">El Capital</a></li>
+              <li><a href="https://archive.org/search?query=el+capital" target="_blank" class="text-blue-600 hover:underline">El Capital</a></li>
               <li><a href="https://archive.org/search?query=el+capital" target="_blank" class="text-blue-600 hover:underline">Manuscritos Económico-Filosóficos</a></li>
               <li><a href="https://www.amazon.es/Cr%C3%ADtica-filosof%C3%ADa-derecho-Hegel-espa%C3%B1ol/dp/842067850X" target="_blank" class="text-blue-600 hover:underline">Crítica de la Filosofía del Derecho de Hegel</a></li>
               <li><a href="https://www.gutenberg.org/ebooks/2600" target="_blank" class="text-blue-600 hover:underline">La Ideología Alemana</a></li>
